@@ -143,6 +143,7 @@ t_add_to_collection = Add to collection
 t_remove_from_collection = Remove from collection
 t_need_authentication_to_add_series_to_collection = \
 In order to add this series to your collection you should <a href="{0}">register</a> or <a href="{1}">pass authentication</a>.
+t_hidden_images = Hidden images
 t_image_id = Image ID
 t_add_image = Add image
 t_replace_image = Replace image
