@@ -15,7 +15,7 @@ series_image.find_by_series_id = \
 SELECT image_id \
   FROM series_images \
  WHERE series_id = :series_id \
-   AND hidden = FALSE
+   AND hidden = :hidden
 
 image_data.find_by_image_id = \
 SELECT d.content AS data \
